<resources>
    <string name="app_name">Music Player</string>
    <string name="song_title">Song Title</string>
    <string name="song_singer">Song Singer</string>
    <string name="description">Description</string>
    <string name="playing_now">PLAYING NOW</string>

    <string name="_2_22">2:22</string>
    <string name="playing_all_songs">Playing All Songs</string>
    <string name="_165_songs">165 songs</string>
    <string name="singer">Singer</string>
    <string name="title">Title</string>
</resources>