<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/controller_layout"
    android:background="@color/background_dark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/backspace"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_backspace"
        android:tint="#7f8287"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shapeType="flat" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/playing_now"
        android:textColor="#BBC3D1"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/backspace"
        app:layout_constraintEnd_toStartOf="@id/listInfo"
        app:layout_constraintStart_toEndOf="@id/backspace"
        app:layout_constraintTop_toTopOf="@+id/backspace" />
    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/listInfo"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_info"
        android:tint="#7f8287"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shapeType="flat" />

    <soup.neumorphism.NeumorphImageView
        android:id="@+id/song_photo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_def"
        app:neumorph_shadowElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listInfo"
        app:neumorph_shadowColorDark="@color/shadowColorLight"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shapeAppearance="@style/CustomImageView"
        app:neumorph_shapeType="flat" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="#BBC3D1"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/song_photo"
        app:layout_constraintStart_toStartOf="@+id/song_photo"
        app:layout_constraintTop_toBottomOf="@+id/song_photo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/song_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="false"
        android:textColor="#949495"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/song_title"
        app:layout_constraintStart_toStartOf="@+id/song_title"
        app:layout_constraintTop_toBottomOf="@+id/song_title" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/song_currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/_2_22"
        android:typeface="normal"
        android:textColor="#929293"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="@id/seekbar"
        app:layout_constraintBottom_toTopOf="@id/seekbar" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/song_endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/_2_22"
        android:typeface="normal"
        android:textColor="#929293"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="@id/seekbar"
        app:layout_constraintBottom_toTopOf="@id/seekbar" />
    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        android:layout_marginBottom="30dp"
        android:progressDrawable="@drawable/seek_bar"
        android:thumb="@drawable/thumb_seekbar_custom_control"
        app:layout_constraintBottom_toTopOf="@id/play_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/backward"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_backward"
        android:tint="#7f8287"
        android:background="@drawable/button_background"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shapeType="flat" />

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/play_pause"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="70dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_pause"
        android:tint="#CED1D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/forward"
        app:layout_constraintStart_toEndOf="@+id/backward"
        app:neumorph_backgroundColor="@color/colorPrimary"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shapeType="flat" />
    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/forward"
        style="@style/Widget.Neumorph.ImageButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:tint="#7f8287"
        android:scaleType="centerInside"
        app:neumorph_shadowColorLight="@color/shadowColorLight"
        app:neumorph_shadowColorDark="@color/shadowColorDark"
        android:src="@drawable/ic_forward"
        app:neumorph_shapeType="flat"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>